toml-pretty-deser/compilation_failure_tests/alias_enum_duplicate.stderr
error: alias "r" is listed more than once
 --> compilation_failure_tests/alias_enum_duplicate.rs:8:5
  |
8 |     Red,
  |     ^^^
